# quicky_booky

./: README.md  pyproject.toml  requirements.txt  start.bat
back/ebookGen/: app.py  coverPageGen.py  generator.py  openaiGen.py  openai_test.py
back/ebookGen/docs/: ebook.docx  stuff.docx
back/ebookgenV1/: main.py
back/ebookgenV1/app/: app.py  assembler.py
back/ebookgenV1/app/formulation/: content_formulator.py  cover_formulator.py  graph_formulator.py
back/ebookgenV1/app/generation/: content_generator.py
back/ebookgenV1/data/: db_connection.py
back/ebookgenV1/data/models/: books.py  cart.py  users.py
back/ebookgenV1/data/modules/: books.py  orders.py
back/ebookgenV1/data/repositories/: book_repo.py  order_repo.py  user_repo.py
back/tests/: test.yml  test_app.py
front/: index.html  package-lock.json  package.json
front/src/: About.jsx  App.tsx  BuyButtonComponent.jsx  ContactForm.jsx  Dashboard.jsx  EbookForm.jsx  FeatureSection.jsx  Footer.jsx  HeroSection.tsx  HomePage.jsx  Navbar.tsx  PricingSection.jsx  RegistrationForm.jsx  index.css  loginForm.jsx
