[tool.poetry]
name = "quicky-booky"
version = "0.1.0"
description = "E-book generation tool"
authors = ["Mohamed Aziz Ben Anaya <benanayaka@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
braq = "0.0.12"
colorama = "0.4.6"
docx2pdf = "0.1.8"
kvf = "0.0.3"
lxml = "5.3.0"
paradict = "0.0.16"
pillow = "11.0.0"
pypdf2 = "3.0.1"
pywin32 = "308"
shared = "0.0.32"
tqdm = "4.67.1"
python-docx = "^1.1.2"
pydantic = "^2.10.4"
pymongo = "^4.10.1"
fastapi = {extras = ["standard"], version = "^0.115.6"}
werkzeug = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


